ASSIGNED 171001
Another deadlock in CoreAudioCaptureSource
https://bugs.webkit.org/show_bug.cgi?id=171001
Summary Another deadlock in CoreAudioCaptureSource
Eric Carlson
Reported 2017-04-19 11:30:00 PDT
Fix deadlock in CoreAudioCaptureSource and address comments missed in the review of bug 170771.
Attachments
Proposed patch. (6.23 KB, patch)
2017-04-19 11:38 PDT, Eric Carlson
no flags
Patch for landing. (6.21 KB, patch)
2017-04-19 12:49 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2017-04-19 11:31:39 PDT
Eric Carlson
Comment 2 2017-04-19 11:38:18 PDT
Created attachment 307494 [details] Proposed patch.
youenn fablet
Comment 3 2017-04-19 12:21:00 PDT
Comment on attachment 307494 [details] Proposed patch. r=me with small change discussed directly
Eric Carlson
Comment 4 2017-04-19 12:49:12 PDT
Created attachment 307499 [details] Patch for landing.
WebKit Commit Bot
Comment 5 2017-04-19 13:43:04 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: http/tests/misc/acid3.html bug 165734 (authors: abecsi@webkit.org, arv@chromium.org, mitz@webkit.org, rniwa@webkit.org, and tonyg@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2017-04-19 13:43:05 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7 2017-04-19 14:24:23 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: media/modern-media-controls/macos-fullscreen-media-controls/macos-fullscreen-media-controls-buttons-styles.html bug 168317 (author: graouts@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2017-04-19 14:24:24 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9 2017-04-19 15:05:53 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 10 2017-04-19 15:05:54 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 11 2017-04-19 16:36:39 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 12 2017-04-19 16:36:58 PDT
The commit-queue encountered the following flaky tests while processing attachment 307499 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 13 2017-04-19 17:53:40 PDT
Comment on attachment 307499 [details] Patch for landing. Clearing flags on attachment: 307499 Committed r215546: <http://trac.webkit.org/changeset/215546>
Note You need to log in before you can comment on or make changes to this bug.